[package]
name = "rai-lib"
version = "0.1.0"
authors = ["Lee Bousfield <ljbousfield@gmail.com>"]
publish = false

[lib]
name = "rai_lib"
crate-type = ["staticlib"]

[features]
default = ["threading"]
threading = []

[dependencies]
nanocurrency-types = "0.3.12"
libc = "0.2.42"
serde_json = "1.0.20"
hex = "0.3.2"
byteorder = "1.2.3"
rand = "0.5.0"
blake2 = "0.7.1"
digest = "0.7.2"
ed25519-dalek = "0.6.2"
serde = "1.0.66"
num_cpus = "1.8.0"
